specs/blueprints/errors/validation/expected_fieldset_got_section.eno
# Expecting a fieldset but getting an empty section

-- input
# section
-- input

-- javascript
eno.parse(input).fieldset('section');
-- javascript

-- php
Eno\Parser::parse($input)->fieldset('section');
-- php

-- python
enolib.parse(input).fieldset('section')
-- python

-- ruby
Eno.parse(input).fieldset('section')
-- ruby

## ValidationError

-- text
Instead of the expected fieldset 'section' a section with this key was found.
-- text

-- snippet
   Line | Content
 >    1 | # section
-- snippet

selection: [0,0] => [0,9]


# Expecting a fieldset but getting a section with a field and a list

-- input
# section

field: value

list:
- item
- item
-- input

-- javascript
eno.parse(input).fieldset('section');
-- javascript

-- php
Eno\Parser::parse($input)->fieldset('section');
-- php

-- python
enolib.parse(input).fieldset('section')
-- python

-- ruby
Eno.parse(input).fieldset('section')
-- ruby

## ValidationError

-- text
Instead of the expected fieldset 'section' a section with this key was found.
-- text

-- snippet
   Line | Content
 >    1 | # section
      2 | 
      3 | field: value
   ...
-- snippet

selection: [0,0] => [6,6]

# Expecting a fieldset but getting a section with subsections

-- input
# section

## subsection

field: value

## subsection

list:
- item
- item
-- input

-- javascript
eno.parse(input).fieldset('section');
-- javascript

-- php
Eno\Parser::parse($input)->fieldset('section');
-- php

-- python
enolib.parse(input).fieldset('section')
-- python

-- ruby
Eno.parse(input).fieldset('section')
-- ruby

## ValidationError

-- text
Instead of the expected fieldset 'section' a section with this key was found.
-- text

-- snippet
   Line | Content
 >    1 | # section
      2 | 
      3 | ## subsection
   ...
-- snippet

selection: [0,0] => [10,6]
